# koan

./: .gitignore  CMakeLists.txt  Makefile  evaluate.py  koan.cpp  run.sh  test.sh
koan/: def.h  trainer.h
